--- a/vpps-reportcards/index.html
+++ b/vpps-reportcards/index.html
@@ -6,8 +6,9 @@
   <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Veer Patta Public School — Upload Excel mark sheets, validate student data, and generate professional report cards." />
-  <title>VPPS Report Cards Generator</title>
+    content="Veer Patta Public School — Upload Excel mark sheets, validate student data, and generate professional duplex report cards as PDF." />
+  <meta name="theme-color" content="#0f1117" />
+  <title>VPPS Report Card Generator</title>
 </head>
 
 <body>
