--- a/vpps-reportcards/index.html
+++ b/vpps-reportcards/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/logo.png" />
+  <link rel="icon" type="image/png" href="./logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Veer Patta Public School — Upload Excel mark sheets, validate student data, and generate professional duplex report cards as PDF." />
@@ -13,7 +13,7 @@
 
 <body>
   <div id="app"></div>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 
 </html>
